ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira
spec:
  tls:
  - hosts:
    - jira.kdinesh.in
    secretName: jira-tls
  rules:
  - host: jira.kdinesh.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jira
            port:
              number: 80
